--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,7 @@ Student ID: 1391333
 </head>
 <body>
     <div>
-        <button onclick="location.href='booking.html'" class="btn btn-outline-primary m-3">Booking Page</button>
+        <button onclick="location.href='index.html'" class="btn btn-outline-primary m-3">Booking Page</button>
     </div>
 
     <div class="container-fluid">
